fix the license classifier

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ project_urls =
     Bug Tracker = https://github.com/andreasma/liboextensioncreator/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: LGPL 2.1
+    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
     Operating System :: OS Independent
 
 [options]
